fix icon font-size on mobile version.

--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -47,7 +47,6 @@
     .icon {
         padding: 8px;
         border: 2px solid #5df6d7;
-        font-size: 0.8rem;
     }
 }
 
